# data-engineering-zoomcamp

./: .gitignore  README.md  requirements.txt
01-containerization-iac/: README.md  commands  containerization-iac.md  containerization-iac.py
01-containerization-iac/exercise/: Dockerfile  docker-compose.yaml  exercise.ipynb  ingest_data.py  pyproject.toml
01-containerization-iac/pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  ingest_data_v2.py  notebook.ipynb  (+1 more)
02-workflow-orchestration/: README.md  docker-compose.yaml
03-data-warehousing/: DLT_upload_to_GCP.ipynb  README.md  load_yellow_taxi_data.py  load_yellow_taxi_data_original.py
04-analytics-engineering/: DLT_upload_to_DuckDB.ipynb  DLT_upload_to_GCP.ipynb  DLT_upload_to_GCP_original.ipynb  README.md  load_fhv_data.py  load_fhv_data_to_bigquery.py  load_taxi_data.py  load_to_bigquery.py  requirements.txt
05-data-platforms/: README.md
06-agentic-dlt/: README.md  dlt_pipeline_overview.ipynb  open_library_pipeline.py  pyproject.toml  requirements.txt
07-batch-processing/: 02_pyspark.ipynb  04_spark_sql.ipynb  05_groupby_join.ipynb  06_rdds.ipynb  07_cloud.md  07_commands  07_commands_and_arguments  07_spark_gcs.ipynb  07_spark_sql.py  08_cloud_spark_sql.py  08_cloud_spark_sql_bq.py  README.md  download_data.sh  groupby_join.ipynb  main.py  pyproject.toml  pyspark.ipynb  rdds.ipynb  spark_project.ipynb  spark_test.py  taxi_schema.ipynb  test.ipynb
08-streaming/: Dockerfile.flink  README.md  docker-compose.yml  flink-config.yaml  green_session.py  green_session2.py  main.py  pyproject.toml
(+44 files in other folders)
