[project]
name = "exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "click>=8.3.1",
    "fsspec>=2026.1.0",
    "ipykernel>=7.1.0",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
]
